<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_contacto"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.androidcertificacion.petagramretrofit.vista.layout.Contacto"
android:orientation="vertical">

<include android:id="@+id/actionbar" layout="@layout/actionbar" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/contacto_title"
    android:textSize="@dimen/contacto_title_size"
    android:layout_gravity="center"
    android:textStyle="bold"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/contacto_subtitle"
    android:textSize="@dimen/contacto_subtitle_size"
    android:layout_gravity="center"
    android:textAlignment="center"
    android:textStyle="italic"/>

<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/contactoTextInputNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contacto_inputText_nombreHint"/>
</android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/contactoTextInputCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contacto_inputText_correoHint"/>
</android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/contactoTextInputMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contacto_inputText_mensajeHint"/>
</android.support.design.widget.TextInputLayout>

<Button
    android:id="@+id/contactoButtonEnviar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/contacto_buttonEnviar"
    android:textSize="@dimen/contacto_button_textsize"
    android:layout_gravity="center"
    android:theme="@style/button"/>

</LinearLayout>


