<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_about"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.androidcertificacion.petagramretrofit.vista.layout.About"
android:orientation="vertical">

<include android:id="@+id/actionbar" layout="@layout/actionbar">

</include>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/about_marginTop">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/importance"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_text_acercaDe"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/about_text_acercaDe_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/about_margin_acercaDe"
        android:layout_marginLeft="@dimen/about_margin_acercaDe"
        />


</LinearLayout>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/about_bodytext1"
    android:textSize="@dimen/about_text_size"
    android:layout_marginTop="@dimen/about_margin_bodyText"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/about_bodytext2"
    android:textSize="@dimen/about_text_size"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/about_bodytext3"
    android:textSize="@dimen/about_text_size"/>





</LinearLayout>

