<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_configurar_cuenta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.androidcertificacion.petagramretrofit.vista.layout.ConfigurarCuenta">

    <include android:id="@+id/actionbar" layout="@layout/actionbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configurarCuenta_textView_title"
        android:textSize="@dimen/contacto_title_size"
        android:layout_gravity="center"
        android:textStyle="bold"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/configCuenta_textInputLayout_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/configCuenta_textInputLayout_marginTop">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputConfigurarCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/configurarCuenta_inputText_Hint"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnConfigurarCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configurarCuenta_button_text"
        android:textSize="@dimen/contacto_button_textsize"
        android:layout_gravity="center"
        android:theme="@style/button"
        android:layout_marginTop="@dimen/configCuenta_button_marginTop"
        />

</LinearLayout>
